# quantitative-portfolio-optimization

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: main.yml  pr.yaml
notebooks/: cvar_basic.ipynb  efficient_frontier.ipynb  launchable.ipynb  mean_variance_basic.ipynb  rebalancing_strategies.ipynb
src/: __init__.py  backtest.py  base_optimizer.py  base_parameters.py  cvar_data.py  cvar_optimizer.py  cvar_parameters.py  cvar_utils.py  mean_variance_optimizer.py  mean_variance_parameters.py  portfolio.py  rebalance.py  settings.py  utils.py
tests/: test_core.py
