[project]
name = "cufolio"
version = "25.10"
description = "Quantitative Portfolio Optimization developer example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0",
    "cvxpy>=1.7.0",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "yfinance>=0.2.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.9",
    "pytest>=9.0",
    "pre-commit==4.3.0",
]
cuda12 = [
    "cuml-cu12==26.4.*",
    "cuopt-cu12==26.04.*",
]
cuda13 = [
    "cuml-cu13==26.4.*",
    "cuopt-cu13==26.04.*",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["E402"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.setuptools]
packages = ["cufolio"]
py-modules = []

[tool.setuptools.package-dir]
cufolio = "src"

[tool.setuptools.package-data]
"*" = ["*.csv", "*.pkl", "*.parquet"]

[tool.uv]
managed = true
conflicts = [
    [
        { extra = "cuda12" },
        { extra = "cuda13" },
    ],
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv.sources]
cuml-cu12 = { index = "nvidia" }
cuopt-cu12 = { index = "nvidia" }
cuml-cu13 = { index = "nvidia" }
cuopt-cu13 = { index = "nvidia" }

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
